--- a/fitnesse/FitNesseRoot/RecentChanges.wiki
+++ b/fitnesse/FitNesseRoot/RecentChanges.wiki
@@ -1,3 +1,5 @@
+|FrontPage.PU8UpdateParcelStatus||21:18:43 Mon, Jan 26, 2026|
+|updateParcelStatus||21:18:14 Mon, Jan 26, 2026|
 |TestPage||20:24:48 Mon, Jan 26, 2026|
 |FrontPage||19:51:10 Mon, Jan 26, 2026|
 |FrontPage.TestPage||19:51:01 Mon, Jan 26, 2026|
